Finished more lang stuff. So much more to go and some ideas like having the customs using colored key names

--- a/skyhighheroes/assets/skyhighheroes/lang/en_US.lang
+++ b/skyhighheroes/assets/skyhighheroes/lang/en_US.lang
@@ -1,19 +1,13 @@
-damage_type.atlantean_steel.name=Atlantean Steel
-damage_type.blunt.name=Blunt
-damage_type.bullet.name=Bullet
-damage_type.cactus.name=Cactus
-damage_type.cold.name=Cold
-damage_type.cosmic.name=Cosmic
-damage_type.electricity.name=Electricity
-damage_type.energy.name=Energy
-damage_type.eternium.name=Eternium
-damage_type.explosion.name=Explosion
-damage_type.fire.name=Fire
-damage_type.magic.name=Magic
-damage_type.sharp.name=Sharp
-damage_type.shuriken.name=Shuriken
-damage_type.sound.name=Sound
-damage_type.thorns.name=Thorns
+damage_type.skyhighheroes.wave_blunt.name=Blunt (Wave)
+damage_type.skyhighheroes.wave_bullet.name=Bullet (Wave)
+damage_type.skyhighheroes.wave_cold.name=Cold (Wave)
+damage_type.skyhighheroes.wave_electricity.name=Electricity (Wave)
+damage_type.skyhighheroes.wave_energy.name=Energy (Wave)
+damage_type.skyhighheroes.wave_explosion.name=Explosion (Wave)
+damage_type.skyhighheroes.wave_fire.name=Fire (Wave)
+damage_type.skyhighheroes.wave_sharp.name=Sharp (Wave)
+damage_type.skyhighheroes.wave_shuriken.name=Shuriken (Wave)
+damage_type.skyhighheroes.wave_sound.name=Sound (Wave)
 
 hero.skyhighheroes.aidan_stelar.name=Aidan Stelar
 hero.skyhighheroes.aidan_stelar.gundam.name=\u00A76RX-0 \u00A76Unicorn \u00A76Gundam \u00A76Style\u00A7r
@@ -49,23 +43,23 @@ hero.skyhighheroes.yellow_stelar.name=Yellow Stelar
 hero.skyhighheroes.yellow_stelar.spider_man.name=\u00A73Spider-Man \u00A73(PS4) \u00A73Style\u00A7r
 hero.skyhighheroes.astro_boy.name=Astro Boy
 
-item.skyhighheroes.version.mmsf=Mega Man Star Force
-item.skyhighheroes.version.aidan_tenma=Aidan Tenma
-item.skyhighheroes.version.boom_tenma=Boom Tenma
-item.skyhighheroes.version.chase_tenma=Chase Tenma
-item.skyhighheroes.version.comic_tenma=Comic Tenma
-item.skyhighheroes.version.dark_tenma=Dark Tenma
-item.skyhighheroes.version.expo_tenma=Expo Tenma
-item.skyhighheroes.version.fire_tenma=Fire Tenma
-item.skyhighheroes.version.fish_tenma=Fish Tenma
-item.skyhighheroes.version.mango_tenma=Mango Tenma
-item.skyhighheroes.version.minecraft_tenma=Minecraft Tenma
-item.skyhighheroes.version.slayer_tenma=Slayer Tenma
-item.skyhighheroes.version.storm_tenma=Storm Tenma
-item.skyhighheroes.version.tobi_tenma=Tobi Tenma
-item.skyhighheroes.version.tobio_tenma=Tobio Tenma
-item.skyhighheroes.version.tysen_tenma=Tysen Tenma
-item.skyhighheroes.version.yellow_tenma=Yellow Tenma
+hero.skyhighheroes.version.mmsf=Mega Man Star Force
+hero.skyhighheroes.version.aidan_tenma=Aidan Tenma
+hero.skyhighheroes.version.boom_tenma=Boom Tenma
+hero.skyhighheroes.version.chase_tenma=Chase Tenma
+hero.skyhighheroes.version.comic_tenma=Comic Tenma
+hero.skyhighheroes.version.dark_tenma=Dark Tenma
+hero.skyhighheroes.version.expo_tenma=Expo Tenma
+hero.skyhighheroes.version.fire_tenma=Fire Tenma
+hero.skyhighheroes.version.fish_tenma=Fish Tenma
+hero.skyhighheroes.version.mango_tenma=Mango Tenma
+hero.skyhighheroes.version.minecraft_tenma=Minecraft Tenma
+hero.skyhighheroes.version.slayer_tenma=Slayer Tenma
+hero.skyhighheroes.version.storm_tenma=Storm Tenma
+hero.skyhighheroes.version.tobi_tenma=Tobi Tenma
+hero.skyhighheroes.version.tobio_tenma=Tobio Tenma
+hero.skyhighheroes.version.tysen_tenma=Tysen Tenma
+hero.skyhighheroes.version.yellow_tenma=Yellow Tenma
 
 item.skyhighheroes.piece.transer=Transer
 item.skyhighheroes.piece.head=Head
@@ -73,82 +67,20 @@ item.skyhighheroes.piece.torso=Torso
 item.skyhighheroes.piece.legs=Legs
 item.skyhighheroes.piece.boots=Boots
 
-key.aim=Aim
-key.antimatterBeam=Antimatter Beam
-key.antimatterBlast=Antimatter Blast
-key.blade=Toggle Blade
-key.canaryCry=Canary Cry
-key.categories.fiskheroes=Fisk's Superheroes
-key.chargeEnergy=Charge Energy
-key.chargeIce=Charge Ice
-key.chargedBeam=Charged Beam
-key.claws=Toggle Claws
-key.combatMode=Toggle Combat Mode
-key.cosmicBeam=Cosmic Energy Beam
-key.crabCannon=Crab Cannon
-key.desc.lmb=Left-Click
-key.desc.rmb=Right-Click
-key.desc.scroll=Scroll
-key.earthquake=Create Tremor
-key.energyProjection=Energy Projection
-key.equipItem=Equip/Unequip Item
-key.forcefield=Forcefield
-key.giantMode=Giant Mode
-key.gravityManip=Gravity Manipulation
-key.groundSmash=Smash Ground
-key.heatVision=Heat Vision
-key.horizontalBow=Bow Horizontal
-key.hover=Hover
-key.iceSpike=Freeze Spike
-key.illusionMenu=Illusion Wheel
-key.intangibility=Toggle Intangibility
-key.invisibility=Toggle Invisibility
-key.levitate=Levitate
-key.mantaRays=Manta Ray Blast
-key.mindStoneBlast=Mind Stone Blast
-key.miniaturizeSuit=Miniaturize Suit
-key.naniteShield=Nanite Shield
-key.naniteTransform=Nanite Transformation
-key.openMask=Open Mask
-key.point=Point
-key.punchToggle=Toggle Charged Punch
-key.reload=Reload
-key.repulsorBeams=Repulsor Beams
-key.sentryMode=Sentry Mode
-key.shadowChain=Shadow Chain
-key.shadowDome=Shadow Dome
-key.shadowForm=Toggle Shadow Form
-key.shapeShift=Shape-Shift
-key.shapeShiftReset=Shape-Shift Reset
-key.shield=Toggle Shield
-key.shieldThrow=Shield Throw
-key.shoot=Shoot
-key.shootSpikes=Spike Burst
-key.sizeManipulation=Change Size
-key.slowMotion=Toggle Slow-Motion Vision
-key.slowMotionHold=Slow-Motion Vision
-key.spellMenu=Spell Wheel
-key.spike=Toggle Spike
-key.steelTransform=Toggle Steel
-key.suitAbility1=Suit Ability 1
-key.suitAbility2=Suit Ability 2
-key.suitAbility3=Suit Ability 3
-key.suitAbility4=Suit Ability 4
-key.suitAbility5=Suit Ability 5
-key.superSpeed=Toggle/Adjust Super-Speed
-key.telekinesis=Telekinesis Grab
-key.teleport=Teleport
-key.tentacleGrab=Tentacle Grab
-key.tentacleJab=Tentacle Jab
-key.tentacleStrike=Tentacle Strike
-key.tentacles=Toggle Tentacles
-key.throwingStars=Toggle Throwing Stars
-key.utilityBelt=Toggle/Cycle Utility Belt
-key.webShooters=Toggle/Cycle Web Shooters
-key.webSwinging=Toggle Web Swinging
-key.webWings=Toggle Web Wings
-key.webZip=Web Zip
-key.wingShield=Wing Shield
+key.cycleClothes=Cycle Clothes
+key.trasnmit=Transmit
+key.toggleVisualizer=Toggle Visualizer
+key.cycleBattleCard=Cycle Battle Card
+key.becomeWave=Become Wave
+key.aimMegaBuster=Aim Mega Buster
+key.throwShield=Throw Shield
+key.emWaveChange=EM Wave Change
+key.toggleHead=Toggle Omega-Xis Head
+key.phase=Become in Phase
+key.aimArmCannon=Aim Arm Cannon
+key.digitBeams=Digit Beams
+key.forceField=Force Field
+key.superSpeed=Super Speed
 
 node.skyhighheroes.archery.bow.desc=Construct a Compound Bow using iron, a stick, and some string
 node.skyhighheroes.archery.name=Archery
